# animavox

./: .gitmodules  CHANGELOG.md  pyproject.toml  tasks.py
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  distributed-tests.yml
examples/: p2p_chat.py
old-tests/: test_transactions.py
sandbox/: lala.py  scratchpad.py
src/animavox/: _utils.py  cli.py  junk.py  network.py  telepathic_objects.py
src/animavox/network/: __init__.py  _abc.py  _libp2p_peer.py  message.py  peer.py  sentinels.py
tests/: conftest.py  test_basic_serialization.py  test_distributed_telepathic_objects.py  test_enduser_example.py  test_network_peer.py  test_transactions.py
