[project]
authors = [{name = "Paul Gierz", email = "pgierz@awi.de"}]
dependencies = []
name = "animavox"
requires-python = ">= 3.11"
version = "0.1.0"

[project.scripts]
animavox = "animavox.cli:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
animavox = { path = ".", editable = true }

[tool.pixi.tasks]
animavox = "python -m animavox.cli"

[tool.pixi.dependencies]
pycrdt = ">=0.12.26,<0.13"
rich-click = ">=1.8.9,<2"
dpath = ">=2.2.0,<3"
