[project]
authors = [{name = "Paul Gierz", email = "pgierz@awi.de"}]
dependencies = [
    "pycrdt>=0.12.26,<0.13",
    "rich-click>=1.8.9,<2",
    "dpath>=2.2.0,<3", 
    "asyncio>=3.4.3,<5",
]
name = "animavox"
description = "A tool for managing and versioning data structures with CRDTs"
requires-python = ">=3.11"
version = "0.1.0"
license = {text = "MIT"}
keywords = ["crdt", "distributed", "p2p", "collaboration", "data-structures"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]

[project.urls]
"Homepage" = "https://github.com/pgierz/animavox"
"Bug Tracker" = "https://github.com/pgierz/animavox/issues"
"Repository" = "https://github.com/pgierz/animavox"
"Changelog" = "https://github.com/pgierz/animavox/blob/main/CHANGELOG.md"

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "pytest-xdist>=3.3.1",
    "pytest-asyncio>=0.23.0",
]
dev = [
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "ruff>=0.0.284",
]
network = [
    "libp2p>=0.2.0",
    "multiaddr>=0.0.9", 
    "protobuf>=4.0.0",
]

[project.scripts]
animavox = "animavox.cli:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build]
packages = ["src/animavox"]

# Pixi configuration
[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64", "osx-64", "osx-arm64", "linux-64"]

# Pixi configuration
[tool.pixi.dependencies]
# Runtime dependencies
pycrdt = ">=0.12.26,<0.13"
"rich-click" = ">=1.8.9,<2"
dpath = ">=2.2.0,<3"

# Development and test dependencies (included in all environments)
pytest = ">=7.4.0"
pytest-cov = ">=4.1.0"
pytest-mock = ">=3.11.1"
pytest-xdist = ">=3.3.1"
pytest-asyncio = ">=1.0.0,<2"
black = ">=23.7.0"
isort = ">=5.12.0"
mypy = ">=1.5.0"
ruff = ">=0.0.284"
fsspec = ">=2025.7.0,<2026"
aiohttp = ">=3.12.14,<4"
loguru = ">=0.7.3,<0.8"
pip = ">=25.1.1,<26"

# Install the package in development mode
[tool.pixi.pypi-dependencies]
animavox = { path = ".", editable = true }
# tellus = { path = "./vendor/tellus", editable = true }
# libp2p = { path = "./vendor/py-libp2p", editable = true }
# fastecdsa = { path = "./vendor/fastecdsa", editable = true }
build = ">=1.0.0"
twine = ">=5.0.0"

[tool.pixi.tasks]
animavox = "python -m animavox.cli"
test = "pytest tests/ -v"
test-ci = "pytest tests/ -v -k 'not TestEndToEndIntegration'"
test-cov = "pytest tests/ --cov=src --cov-report=term-missing --cov-report=xml"
test-cov-ci = "pytest tests/ --cov=src --cov-report=term-missing --cov-report=xml -k 'not TestEndToEndIntegration'"
lint = "ruff check src/ tests/"
format = "black src/ tests/"
format-check = "black --check --diff src/ tests/"
isort-check = "isort --check-only --diff src/ tests/"
typecheck = "mypy src/"
build = "python -m build"
check-package = "twine check dist/*"

# Test configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src"]
addopts = "-v --cov=src --cov-report=term-missing"
norecursedirs = [".git", "build", "dist", "*.egg-info"]

# Formatting and linting
[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.isort]
known-first-party = ["animavox"]

# Type checking
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_incomplete_defs = true
